# ai-agent-chat-carrer-csl

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  visualize_graph.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  health.py
backend/app/core/: config.py
backend/app/schemas/: chat.py  health.py
backend/app/services/: agent.py  conversation.py  prompts.py
frontend/: Dockerfile  next.config.js  package.json
frontend/src/components/: ChatInterface.js
frontend/src/pages/: index.js
frontend/src/styles/: ChatInterface.module.css  globals.css
