[project]
name = "carrer-csl-backend"
version = "0.1.0"
description = "キャリアカウンセラーAIアシスタントのバックエンド"
authors = [
    {name = "User", email = "user@example.com"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "langchain==0.3.26",
    "langchain-core==0.3.69",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.28",
    "langgraph==0.5.3",
    "langgraph-prebuilt==0.5.2",
    "python-dotenv==1.1.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "networkx==3.5",
    "matplotlib==3.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
